# fl-215-study-tool

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements.txt
app/: config.py  database.py  main.py
app/models/: content.py  scheduling.py  study.py
app/routers/: api_analytics.py  api_quiz.py  api_study.py  pages.py
app/static/css/: style.css
app/templates/: base.html
app/templates/pages/: analytics.html  dashboard.html  exam.html  quiz.html  quiz_session.html  study.html  study_session.html
data/: seed_content.py
legacy/: ch10_study_tool.html  ch11_study_tool.html  ch12_study_tool.html  ch13_study_tool.html  ch14_study_tool.html  ch15_study_tool.html  ch16_study_tool.html  ch17_study_tool.html  ch18_study_tool.html  ch1_study_tool.html  ch2_study_tool.html  ch3_study_tool.html  ch4_study_tool.html  ch5_study_tool.html  ch6_study_tool.html  ch7_study_tool.html  ch8_study_tool.html  ch9_study_tool.html
